# Picking-Robot

./: README.md
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/: Project.uvguix.PC  Project.uvguix.cos37  Project.uvguix.逸世  Project.uvoptx  Project.uvprojx
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/Function/: Function.c  Function.h
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/Hardware/Bujin/: Bujin.c  Bujin.h
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/Hardware/LED/: LED.c  LED.h
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/Hardware/MPU6050/: MPU6050.c  MPU6050.h  MPU6050_Reg.h
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/Hardware/Move/: Move.c  Move.h
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/Hardware/OLED/: OLED.c  OLED.h  OLED_Font.h
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/Hardware/QR/: QR.c  QR.h
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/Hardware/Servo/: MyServo.c  MyServo.h  Servo.c  Servo.h
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/HeaderFiles/: HeaderFiles.h
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/Listings/: Project.map  startup_stm32f10x_hd.lst  startup_stm32f10x_md.lst
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/Objects/: Project(1)_Target 1.dep  Project.axf  Project.build_log.htm  Project.hex  Project.htm  Project.lnp  Project_Target 1.dep  angleswitch_pwm.crf  angleswitch_pwm.d  bujin.crf  bujin.d  core_cm3.crf  core_cm3.d  delay.crf  delay.d  function.crf  function.d  iic.crf  iic.d  ioi2c.crf  ioi2c.d  iwdg.crf  iwdg.d  key.crf  key.d  led.crf  led.d  main.crf  main.d  misc.crf  misc.d  move.crf  move.d  mpu6050.crf  mpu6050.d  myservo.crf  myservo.d  oled.crf  oled.d  qr(1).crf  (+67 more)
stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.13/stm32-ZET6 - movetest3_7.12/stm32-ZET6 - movetest3/User/: main.c
视觉相关/: readme.md
视觉相关/camera_calibration_test/: CMakeLists.txt  package.xml
视觉相关/camera_calibration_test/scipts/: test.py
视觉相关/custom_msgs/: CMakeLists.txt  package.xml
视觉相关/custom_msgs/msg/: FruitStatusArray.msg  MatureFruitArray.msg  MaturePoint.msg  MaturePoints.msg
视觉相关/realsense-ros/realsense2_camera/: package.xml
视觉相关/realsense-ros/realsense2_camera/config/: left_ir.yaml  right_ir.yaml
视觉相关/realsense-ros/realsense2_camera/launch/: rs_camera_chu.launch  rs_d435_camera_with_model(复件).launch  rs_d435_camera_with_model.launch
视觉相关/realsense-ros/realsense2_camera/src/: base_realsense_node.cpp
视觉相关/yolo_realsense_ros/: CMakeLists.txt  package.xml  study.py
视觉相关/yolo_realsense_ros/launch/: yolo_node.launch
视觉相关/yolo_realsense_ros/scripts/: yolo_node.py  yolo_node_fix.py  yolo_node_old.py  yolo_node_point.py
视觉相关/yolo_realsense_ros/scripts/usb摄像头输出类别和左右版本/: yolo_node.py
视觉相关/yolo_realsense_ros/yolov5/: detect.py
视觉相关/主逻辑代码♥/旧方案但没那么旧，可行的旧方案/: 111.py  main_id_point.py  qrcode_process.py  test.py  tiaoshi.py
视觉相关/主逻辑代码♥/陈旧的方案/: id.cpp  main_id.cpp
(+12 files in other folders)
