<?xml version="1.0"?>
<package format="2">
  <name>calibration_test_node</name>
  <version>0.0.1</version>
  <description>Depth precision visualization node</description>

  <maintainer email="your@email.com">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export></export>
</package>
